update HTML,CSS and script files

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <title>ETCH-A-SKETCH </title>
   </head>
-  <body class = "main-container">
-    <div class = "container"></div>
-
+  <body>
+    <h1>ETCH-A-SKETCH</h1>
+    <div class = "button-container">
+        <button id = "size" onclick="gridSize()">Edit Grid Size</button>
+        <button id = "clear" onclick="clearDisplay()">Clear Display</button>
+        <button onclick ="colorBlack()">Black</button>
+        <button onclick ="colorShade()">Gradial Shading</button>
+        <button onclick ="colorRandom()">Rainbow</button>
+    </div>
+      <div class = "container" id = "container"></div>
     <script src="./script.js"></script>
   </body>
 </html>
