small typo edits

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <button id = "size" onclick="gridSize()">Edit Grid Size</button>
         <button id = "clear" onclick="clearDisplay()">Clear Display</button>
         <button onclick ="colorBlack()">Black</button>
-        <button onclick ="colorShade()">Gradial Shading</button>
+        <button onclick ="colorShade()">Gradual Shading</button>
         <button onclick ="colorRandom()">Rainbow</button>
     </div>
       <div class = "container" id = "container"></div>
