tidy html and css code

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <title>ETCH-A-SKETCH </title>
-  </head>
-  <body>
-    <h1>ETCH-A-SKETCH</h1>
-    <div class = "button-container">
-        <button id = "size" onclick="gridSize()">Edit Grid Size</button>
-        <button id = "clear" onclick="clearDisplay()">Clear Display</button>
-        <button onclick ="colorBlack()">Black</button>
-        <button onclick ="colorShade()">Gradual Shading</button>
-        <button onclick ="colorRandom()">Rainbow</button>
-    </div>
-      <div class = "container" id = "container"></div>
-    <script src="./script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="./style.css">
+  <title>ETCH-A-SKETCH </title>
+</head>
+
+<body>
+  <h1>ETCH-A-SKETCH</h1>
+  <div class="button-container">
+    <button id="size" onclick="gridSize()">Edit Grid Size</button>
+    <button id="clear" onclick="clearDisplay()">Clear Display</button>
+    <button onclick="colorBlack()">Black</button>
+    <button onclick="colorShade()">Gradial Shading</button>
+    <button onclick="colorRandom()">Rainbow</button>
+  </div>
+  <div class="container" id="container"></div>
+  <script src="./script.js"></script>
+</body>
+
 </html>
